--- a/core/templates/core/_base.html
+++ b/core/templates/core/_base.html
@@ -60,7 +60,7 @@
 
   </div>
 
-  <script src="https://unpkg.com/htmx.org@1.8.4" integrity="sha384-wg5Y/JwF7VxGk4zLsJEcAojRtlVp1FKKdGy1qN+OMtdq72WRvX/EdRdqg/LOhYeV" crossorigin="anonymous"></script>
+  <script src="{% static 'htmx.min.js' %}" defer></script>
 
 </body>
 </html>
