Added userprofile app and functionality for highlight CRUDing.

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,5 @@
 {% extends 'core/_base.html' %}
 
 {% block content %}
-<a href="{% url 'highlights:list' %}">Login</a>
+<a href="{% url 'userprofile:login' %}">Login</a>
 {% endblock content %}
