--- a/core/templates/core/_base.html
+++ b/core/templates/core/_base.html
@@ -9,34 +9,57 @@
   <title>Highlights</title>
   <link rel="stylesheet" href="{% static 'main.min.css' %}">
 </head>
-<body>
+<body 
+  hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+  >
 
   <div class="flex flex-col h-screen justify-between">
 
-    <nav class="border-b border-gray-300">
+    <nav class="border-b border-indigo-300 bg-indigo-100">
       <div class="max-w-6xl mx-auto py-5 px-6 xl:px-0 flex items-center justify-between">
 
         <div class="menu-left flex items-center space-x-4">
-          <a href="#" class="py-3 text-lg text-purple-500 font-semibold">Highlights</a>
-
-          <ul class="flex items-center space-x-3">
-            <li><a href="">About</a></li>
-            <li><a href="">Item 2</a></li>
-          </ul>
+          <a href="{% url 'highlights:list' %}" class="py-3 text-lg text-indigo-500 font-semibold">Highlights</a>
         </div>
 
         <div class="menu-right flex items-center space-x-4">
-          <a href="">
+          {% if request.user.is_authenticated %}
+            <a href="{% url 'userprofile:logout' %}" class="text-indigo-500">Logout</a>
+          {% else %}
+            <a href="{% url 'userprofile:signup' %}" class="py-4 px-6 text-white bg-indigo-500 rounded">Sign up</a>
+            <a href="{% url 'userprofile:login' %}" class="py-4 px-6 text-white bg-indigo-500 rounded">Login</a>
+          {% endif %}
+          <!-- <a href="">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
             </svg>          
-          </a>
+          </a> -->
         </div>
 
       </div>
     </nav>
 
-    <main class="grow">
+    {% if messages %}
+      <div _="on closeToast remove me"
+        id="toast" class="w-100 flex justify-center"
+      >
+        {% for message in messages %}
+          <div class="flex justify-between items-center p-4 mb-4 w-full max-w-xs text-white bg-sky-500 rounded-lg shadow" role="alert">
+            <div class="ml-3 text-sm font-normal">{{ message }}</div>
+            <button _="on click trigger closeToast" 
+              type="button" 
+              class="bg-indigo-500 text-white text-lg rounded inline-flex h-8 w-8 items-center justify-center" 
+              aria-label="Close"
+            >
+                <span class="sr-only">Close</span>
+                <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+            </button>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+
+    <main class="grow py-3">
       {% block content %}
       {% endblock content %}
     </main>
@@ -48,11 +71,15 @@
           <p class="text-gray-700">Lorem ipsum blah blah blah</p>
         </div>
 
+        <div class="text-center flex items-center text-gray-700">
+          <p>Copyright (c) 2022 Matt Bancroft</p>
+        </div>
+
         <div class="footer-right">
           <h2 class="mb-3 uppercase text-lg">Social links</h2>
           <ul class="space-y-2">
-            <li><a href="https://www.github.com/mattb09" class="text-purple-500 hover:text-purple-800">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/matthew-bancroft/" class="text-purple-500 hover:text-purple-800">LinkedIn</a></li>
+            <li><a href="https://www.github.com/mattb09" class="text-indigo-500 hover:text-indigo-800">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/matthew-bancroft/" class="text-indigo-500 hover:text-indigo-800">LinkedIn</a></li>
           </ul>
         </div>
       </div>
@@ -60,7 +87,8 @@
 
   </div>
 
-  <script src="{% static 'htmx.min.js' %}" defer></script>
+  <script src="{% static 'htmx.1.8.4.min.js' %}"></script>
+  <script src="{% static '_hyperscript.0.9.7.min.js' %}"></script>
 
 </body>
 </html>
