--- a/highlights/templates/highlights/list.html
+++ b/highlights/templates/highlights/list.html
@@ -1,37 +1,47 @@
 {% extends 'core/_base.html' %}
 
 {% block content %}
-<div class="filters w-full lg:w-1/4 mb-5">
-  <h3 class="mb-3 text-xl uppercase">Search</h3>
-  
-  <!-- method="get" 
-  action="" -->
-  <form 
-    hx-get="{% url 'highlights:highlight-list' %}"  
-    hx-target="#highlight-list"
-    hx-swap="outerHTML"
-  >
-      <div class="flex">
-          <input type="text" class="p-4 bg-gray-100 border-0" placeholder="Search..." name="query">
+<div class="px-8 max-w-4xl mx-auto">
+    <div class="filters w-full lg:w-1/4 mb-5">
+    <h3 class="mb-3 text-xl uppercase">Search</h3>
+    
+    <!-- method="get" 
+    action="" -->
+    <form
+        hx-trigger="submit, load"
+        hx-get="{% url 'highlights:highlight-list' %}"  
+        hx-target="#highlight-list"
+        hx-swap="outerHTML"
+    >
+        <div class="flex">
+            <input type="text" class="p-4 bg-gray-100 border-0" placeholder="Search..." name="query" value="{{ search_text }}">
 
-          <button class="p-4 bg-gray-100 border-0">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-              </svg>
-          </button>
-      </div>
-  </form>
-  <!-- <h3 class="mt-6 mb-3 text-xl uppercase">Categories</h3>
+            <button class="p-4 bg-gray-100 border-0">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                </svg>
+            </button>
+        </div>
+    </form>
+    <!-- <h3 class="mt-6 mb-3 text-xl uppercase">Categories</h3>
 
-  <ul class="space-y-2">
-      <li><a href="#" class="text-purple-500">All categories</a></li>
-      <li><a href="#" class="text-gray-500">Sofa</a></li>
-      <li><a href="#" class="text-gray-500">Beds</a></li>
-      <li><a href="#" class="text-gray-500">Tables</a></li>
-  </ul> -->
+    <ul class="space-y-2">
+        <li><a href="#" class="text-purple-500">All categories</a></li>
+        <li><a href="#" class="text-gray-500">Sofa</a></li>
+        <li><a href="#" class="text-gray-500">Beds</a></li>
+        <li><a href="#" class="text-gray-500">Tables</a></li>
+    </ul> -->
+    </div>
+
+    <div>
+        <div class="flex justify-between">
+            <h1 class="mb-3 text-xl uppercase">Highlights</h1>
+            <div>
+                <a href="{% url 'highlights:add' %} "class="py-4 px-6 text-white bg-indigo-500 rounded">Add</a>
+            </div>
+        </div>
+
+        {% include 'highlights/partials/highlight-list.html' %}
+    </div>
 </div>
-
-
-<h1 class="mb-3 text-xl uppercase">Highlights</h1>
-{% include 'highlights/partials/highlight-list.html' %}
 {% endblock content %}
