Improved form styling and added tag form.

--- a/highlights/templates/highlights/list.html
+++ b/highlights/templates/highlights/list.html
@@ -14,7 +14,7 @@
         hx-swap="outerHTML"
     >
         <div class="flex">
-            <input type="text" class="p-4 bg-gray-100 border-0" placeholder="Search..." name="query" value="{{ search_text }}">
+            <input type="text" class="p-4 bg-gray-100 border-2 border-indigo-300 rounded" placeholder="Search..." name="query" value="{{ search_text }}">
 
             <button class="p-4 bg-gray-100 border-0">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
