--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .btn-primary {
+        @apply mt-2 py-4 px-6 bg-indigo-500 text-white rounded
+    }
+
+    .nested-form {
+        @apply border-2 border-indigo-800 rounded block p-3
+    }
+}
