--- a/core/templates/core/_base.html
+++ b/core/templates/core/_base.html
@@ -1,17 +1,19 @@
 {% load static %}
+{% load static tailwind_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Highlights</title>
+  {% tailwind_css %}
   <link rel="stylesheet" href="{% static 'main.min.css' %}">
 </head>
-<body 
-  hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-  >
+
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
   <div class="flex flex-col h-screen justify-between">
 
@@ -24,10 +26,10 @@
 
         <div class="menu-right flex items-center space-x-4">
           {% if request.user.is_authenticated %}
-            <a href="{% url 'userprofile:logout' %}" class="text-indigo-500">Logout</a>
+          <a href="{% url 'userprofile:logout' %}" class="text-indigo-500">Logout</a>
           {% else %}
-            <a href="{% url 'userprofile:signup' %}" class="py-4 px-6 text-white bg-indigo-500 rounded">Sign up</a>
-            <a href="{% url 'userprofile:login' %}" class="py-4 px-6 text-white bg-indigo-500 rounded">Login</a>
+          <a href="{% url 'userprofile:signup' %}" class="py-4 px-6 text-white bg-indigo-500 rounded">Sign up</a>
+          <a href="{% url 'userprofile:login' %}" class="py-4 px-6 text-white bg-indigo-500 rounded">Login</a>
           {% endif %}
           <!-- <a href="">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -40,23 +42,25 @@
     </nav>
 
     {% if messages %}
-      <div _="on closeToast remove me"
-        id="toast" class="w-100 flex justify-center"
-      >
-        {% for message in messages %}
-          <div class="flex justify-between items-center p-4 mb-4 w-full max-w-xs text-white bg-sky-500 rounded-lg shadow" role="alert">
-            <div class="ml-3 text-sm font-normal">{{ message }}</div>
-            <button _="on click trigger closeToast" 
-              type="button" 
-              class="bg-indigo-500 text-white text-lg rounded inline-flex h-8 w-8 items-center justify-center" 
-              aria-label="Close"
-            >
-                <span class="sr-only">Close</span>
-                <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-            </button>
-          </div>
-        {% endfor %}
+    <div _="on closeToast remove me" id="toast" class="w-100 flex justify-center">
+      {% for message in messages %}
+      <div class="flex justify-between items-center p-4 mb-4 w-full max-w-xs text-white bg-sky-500 rounded-lg shadow"
+        role="alert">
+        <div class="ml-3 text-sm font-normal">{{ message }}</div>
+        <button _="on click trigger closeToast" type="button"
+          class="bg-indigo-500 text-white text-lg rounded inline-flex h-8 w-8 items-center justify-center"
+          aria-label="Close">
+          <span class="sr-only">Close</span>
+          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
       </div>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <main class="grow py-3">
@@ -79,7 +83,8 @@
           <h2 class="mb-3 uppercase text-lg">Social links</h2>
           <ul class="space-y-2">
             <li><a href="https://www.github.com/mattb09" class="text-indigo-500 hover:text-indigo-800">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/matthew-bancroft/" class="text-indigo-500 hover:text-indigo-800">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/matthew-bancroft/"
+                class="text-indigo-500 hover:text-indigo-800">LinkedIn</a></li>
           </ul>
         </div>
       </div>
@@ -91,4 +96,5 @@
   <script src="{% static '_hyperscript.0.9.7.min.js' %}"></script>
 
 </body>
+
 </html>
