--- a/highlights/templates/highlights/tags/add.html
+++ b/highlights/templates/highlights/tags/add.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 <div class="text-2xl px-8 max-w-4xl mx-auto">
-  <h1>Add Tag</h1>
+  <h1 class="mb-5">Add Tag</h1>
 
-  {% include "highlights/partials/tags/form.html" %}
+  <div class="container mx-auto">
+    {% include "highlights/partials/tags/form.html" %}
+  </div>
 </div>
 
 {% endblock content %}
